results/logs/error_log/task_BigCodeBench_1107_error.log
refcode测试失败，BigCodeBench/1107的依赖{'datetime': '5.5', 'python': '3.12', 'pytz': '2024.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_4_0.py']' returned non-zero exit status 1.
stderr:
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_4_0.py", line 11
    </end>
    ^
SyntaxError: invalid syntax

stdout:

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_4_0.py']' returned non-zero exit status 1.

refcode测试失败，BigCodeBench/1107的依赖{'datetime': '5.5', 'python': '3.12', 'pytz': '2024.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_4_0.py']' returned non-zero exit status 1.
stderr:
/home/chenrongyi/codes/VersiBCB_Benchmark/test_4_0.py:6: DeprecationWarning: datetime.datetime.utcfromtimestamp() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.fromtimestamp(timestamp, datetime.UTC).
  utc_dt = datetime.datetime.utcfromtimestamp(unix_timestamp)
F.FFFF
======================================================================
FAIL: test_case_1 (test_4_0.TestCases.test_case_1)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_4_0.py", line 18, in test_case_1
    self.assertEqual(result, "2012-09-13 02:22:50")
AssertionError: '2012-09-13 06:22:50' != '2012-09-13 02:22:50'
- 2012-09-13 06:22:50
?             ^
+ 2012-09-13 02:22:50
?             ^


======================================================================
FAIL: test_case_3 (test_4_0.TestCases.test_case_3)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_4_0.py", line 26, in test_case_3
    self.assertEqual(result, "2021-01-01 09:00:00")
AssertionError: '2021-01-01 00:00:00' != '2021-01-01 09:00:00'
- 2021-01-01 00:00:00
?             ^
+ 2021-01-01 09:00:00
?             ^


======================================================================
FAIL: test_case_4 (test_4_0.TestCases.test_case_4)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_4_0.py", line 30, in test_case_4
    self.assertEqual(result, "1970-01-01 05:30:00")
AssertionError: '1970-01-01 00:00:00' != '1970-01-01 05:30:00'
- 1970-01-01 00:00:00
?             ^ ^
+ 1970-01-01 05:30:00
?             ^ ^


======================================================================
FAIL: test_case_5 (test_4_0.TestCases.test_case_5)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_4_0.py", line 34, in test_case_5
    self.assertEqual(result, "2023-01-01 10:59:59")
AssertionError: '2022-12-31 23:59:59' != '2023-01-01 10:59:59'
- 2022-12-31 23:59:59
?    ^  - ^  ^^
+ 2023-01-01 10:59:59
?    ^ +  ^  ^^


======================================================================
FAIL: test_case_6 (test_4_0.TestCases.test_case_6)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_4_0.py", line 38, in test_case_6
    self.assertEqual(result, "2020-12-31 19:00:00")
AssertionError: '2021-01-01 00:00:00' != '2020-12-31 19:00:00'
- 2021-01-01 00:00:00
+ 2020-12-31 19:00:00


----------------------------------------------------------------------
Ran 6 tests in 0.016s

FAILED (failures=5)

stdout:

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_4_0.py']' returned non-zero exit status 1.

